# rcsim

./: CMakeLists.txt  Makefile  README.md  airplane.cc  airplane.h  airplane_models.cc  airplane_models.h  arrow.cc  arrow.h  controller.cc  controller.h  controls.cc  controls.h  controls_view.cc  controls_view.h  dashboard.cc  dashboard.h  flight_controller.cc  flight_controller.h  flying_object.cc  flying_object.h  heli.cc  heli.h  input_event_reciever.cc  input_event_reciever.h  main.cc  model_configurations.cc  model_configurations.h  rotor_blur.cc  rotor_blur.h  smooth_rand.cc  smooth_rand.h
.github/workflows/: pages.yml
media/cessna/: CessnaBodyFixed2.mtl  CessnaBodyForShade.mtl
resources/media/Cessna/: cessna.mtl
resources/media/cessna/: CessnaProp.mtl  CessnaRudder.mtl
resources/shaders/glsl100/: lighting_with_shadow.fs  lighting_with_shadow.vs  shadowmap.fs
resources/shaders/glsl300es/: lighting_with_shadow.fs  lighting_with_shadow.vs
resources/shaders/glsl330/: lighting_with_shadow.fs
src/: airplane.cc  airplane.h  airplane_models.cc  airplane_models.h  arrow.cc  controls.cc  controls.h  dashboard.cc  dashboard.h  flight_controller.cc  flight_controller.h  flying_object.cc  flying_object.h  game.cc  game.h  heli.cc  heli.h  input_event_reciever.cc  input_event_reciever.h  main.cc  model_configurations.cc  model_configurations.h  raylib_engine.cc  raylib_engine.h  rlights.cc  rlights.h  smooth_rand.cc  smooth_rand.h
